<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.facundoaramayo.meliuiandroid.modules.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.facundoaramayo.meliuiandroid.modules.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
        <argument
            android:name="search"
            android:defaultValue="@null"
            app:nullable="true"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.facundoaramayo.meliuiandroid.modules.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.facundoaramayo.meliuiandroid.modules.product.ProductDetailFragment"
        android:label="product_detail_fragment"
        tools:layout="@layout/product_detail_fragment" >
        <argument
            android:name="product"
            android:defaultValue="@null"
            app:nullable="true"
            app:argType="com.facundoaramayo.meliuiandroid.modules.product.model.ProductModel" />
        <argument
            android:name="source"
            android:defaultValue="@null"
            app:nullable="true"
            app:argType="string" />
        <action
            android:id="@+id/action_productDetailFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_productDetailFragment_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>
</navigation>
